welcome.lessons.welcome.loopdowhile.Poucet.scala.code

do {
	 if(croisement()) {
	 	if(nbBagels < 3) {
	 		
	 	}
	 }
} while(!sortieTrouvee())
avance();